--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -4,7 +4,108 @@
 %% Created for Grégoire Schneeberger at 2021-01-15 16:55:18 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
+@article {MR3465847,
+    AUTHOR = {Minasyan, Ashot},
+     TITLE = {New examples of groups acting on real trees},
+   JOURNAL = {J. Topol.},
+  FJOURNAL = {Journal of Topology},
+    VOLUME = {9},
+      YEAR = {2016},
+    NUMBER = {1},
+     PAGES = {192--214},
+      ISSN = {1753-8416},
+   MRCLASS = {20E08 (20F06 20F65)},
+  MRNUMBER = {3465847},
+MRREVIEWER = {Hao Liang},
+       DOI = {10.1112/jtopol/jtv035},
+       URL = {https://doi.org/10.1112/jtopol/jtv035},
+}
+
+@article {MR487104,
+    AUTHOR = {Scott, Peter},
+     TITLE = {Ends of pairs of groups},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {11},
+      YEAR = {1977/78},
+    NUMBER = {1-3},
+     PAGES = {179--198},
+      ISSN = {0022-4049},
+   MRCLASS = {20F99},
+  MRNUMBER = {487104},
+MRREVIEWER = {Ross Geoghegan},
+       DOI = {10.1016/0022-4049(77)90051-2},
+       URL = {https://doi.org/10.1016/0022-4049(77)90051-2},
+}
+
+@article {MR2671183,
+    AUTHOR = {Chatterji, Indira and Dru\c{t}u, Cornelia and Haglund, Fr\'{e}d\'{e}ric},
+     TITLE = {Kazhdan and {H}aagerup properties from the median viewpoint},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {225},
+      YEAR = {2010},
+    NUMBER = {2},
+     PAGES = {882--921},
+      ISSN = {0001-8708},
+   MRCLASS = {20F65 (20F50 20F67 46B04)},
+  MRNUMBER = {2671183},
+MRREVIEWER = {Alain Valette},
+       DOI = {10.1016/j.aim.2010.03.012},
+       URL = {https://doi.org/10.1016/j.aim.2010.03.012},
+}
+
+@article {MR3299841,
+    AUTHOR = {Cornulier, Yves},
+     TITLE = {Irreducible lattices, invariant means, and commensurating
+              actions},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {279},
+      YEAR = {2015},
+    NUMBER = {1-2},
+     PAGES = {1--26},
+      ISSN = {0025-5874},
+   MRCLASS = {43A07 (22E40)},
+  MRNUMBER = {3299841},
+MRREVIEWER = {Alain Valette},
+       DOI = {10.1007/s00209-014-1355-x},
+       URL = {https://doi.org/10.1007/s00209-014-1355-x},
+}
+
+@article {MR1432323,
+    AUTHOR = {Niblo, Graham and Reeves, Lawrence},
+     TITLE = {Groups acting on {${\rm CAT}(0)$} cube complexes},
+   JOURNAL = {Geom. Topol.},
+  FJOURNAL = {Geometry and Topology},
+    VOLUME = {1},
+      YEAR = {1997},
+     PAGES = {approx. 7 pp.\},
+      ISSN = {1465-3060},
+   MRCLASS = {57M07 (20F32)},
+  MRNUMBER = {1432323},
+MRREVIEWER = {Philip L. Bowers},
+       DOI = {10.2140/gt.1997.1.1},
+       URL = {https://doi.org/10.2140/gt.1997.1.1},
+}
+
+@article {MR2240370,
+    AUTHOR = {de Cornulier, Yves},
+     TITLE = {Strongly bounded groups and infinite powers of finite groups},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {34},
+      YEAR = {2006},
+    NUMBER = {7},
+     PAGES = {2337--2345},
+      ISSN = {0092-7872},
+   MRCLASS = {20F65 (06E10)},
+  MRNUMBER = {2240370},
+MRREVIEWER = {Piotr W. Nowak},
+       DOI = {10.1080/00927870600550194},
+       URL = {https://doi.org/10.1080/00927870600550194},
+}
 
 @ARTICLE{2017arXiv170500834G,
        author = {{Genevois}, Anthony},
