--- a/Property FW and wreath products/Bouts/Definitions.tex
+++ b/Property FW and wreath products/Bouts/Definitions.tex
@@ -15,8 +15,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Definitions and examples}
-This section contains all the definitions, as well as some useful preliminaries facts and some examples.
-All the results cited in this section are standard.
+
+
+This section contains all the definitions, some standard but usefull preliminary results as well as some examples.
 % and can be found in any good book about geometric group theory, see for example~\cite{DelaHarpe2000}.\todo{Peut-être retravailler l'intro.}
 %
 %
@@ -104,7 +105,7 @@ On the other hand, Schreier graphs may have any number of ends in $\mathbf N\cup
 %While the number of ends of Cayley graphs of finitely generated groups can only be $0$, $1$, $2$ or infinite (in which case it is uncountable) \cite[Theorem 11.27]{Stallings1971}, Schreier graphs may have any number of ends in $\mathbf N\cup\{\infty\}$, see Figure~\ref{Figure:SchreierOfF2} for an example of a graph with another number of ends.
 In fact, every regular graph of even degree is isomorphic to a Schreier graph, \cite{MR0450121,MR1358635}.
 
-We are now finally able to introduce property FW. The following characterization is due to Cornulier \cite{Cornulier2013}.
+We are now finally able to introduce property FW. Insteed of giving the original definition in terms of actions on wall spaces, we will use an equivalent one for finitely generated group due to Cornulier \cite{Cornulier2013}.
 %
 %
 \begin{defn}
