--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -970,18 +970,18 @@ Moreover, by using Lemma~\ref{Lemma:Cof} we can get ride of the ``finitely many 
 %
 %
 %
-\begin{rem}
-As the attentive reader might have remarked, we are more interested in bornological spaces that in metric spaces. 
-In fact, the only place where we need more structure that an abstract bornology is Lemma~\ref{Lemma:Semidirect} where we need that if $H$ is a subgroup of $G$ and $B$ is a bounded subset of $X$, then the $\{h.B\}_{h\in H}$ are in some sense ``uniformly bounded''.
-This holds as soon as we have a suitable notion of diameter which is $G$-invariant.
-The standard example consists of metric spaces and action by isometries.
-However, it is possible to define a meaningful notion of diameter for more general spaces. Let $X$ be a \emph{quasipseudometric space}, that is we have a map $d\colon X\times X\to\mathbf R_{\geq0}$ satisfying the triangle inequality and such that $d(x,x)=0$ for all $x$.
-We then define the \emph{diameter} of a subset $Y\leq X$ as $\diam(Y)\coloneqq\sup\setst{d(x,y)}{x,y\in Y}$.
-By saying that bounded subsets are subsets with finite diameter, we obtain a bornology on $(X,d)$.
-
-Let $\mathbf{QPMet}$ be the category of quasipseudometric spaces together with short maps.
-It is possible to replace $\mathbf{Met}$ by $\mathbf{QPMet}$ in Definition~\ref{Def:Categoric} and what follows, without changing the statements and the proofs.
-\end{rem}
+%\begin{rem}
+%As the attentive reader might have remarked, we are more interested in bornological spaces that in metric spaces. 
+%In fact, the only place where we need more structure that an abstract bornology is Lemma~\ref{Lemma:Semidirect} where we need that if $H$ is a subgroup of $G$ and $B$ is a bounded subset of $X$, then the $\{h.B\}_{h\in H}$ are in some sense ``uniformly bounded''.
+%This holds as soon as we have a suitable notion of diameter which is $G$-invariant.
+%The standard example consists of metric spaces and action by isometries.
+%However, it is possible to define a meaningful notion of diameter for more general spaces. Let $X$ be a \emph{quasipseudometric space}, that is we have a map $d\colon X\times X\to\mathbf R_{\geq0}$ satisfying the triangle inequality and such that $d(x,x)=0$ for all $x$.
+%We then define the \emph{diameter} of a subset $Y\leq X$ as $\diam(Y)\coloneqq\sup\setst{d(x,y)}{x,y\in Y}$.
+%By saying that bounded subsets are subsets with finite diameter, we obtain a bornology on $(X,d)$.
+%
+%Let $\mathbf{QPMet}$ be the category of quasipseudometric spaces together with short maps.
+%It is possible to replace $\mathbf{Met}$ by $\mathbf{QPMet}$ in Definition~\ref{Def:Categoric} and what follows, without changing the statements and the proofs.
+%\end{rem}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%    Subsection : On group extensions    %%%%%%%%%%%%%%%%%
